# chat_frappe

./: .gitignore  API_CONFIG.md  API_REFERENCE.md  CHECKLIST.md  INSTALL.md  INTEGRATION_SUMMARY.md  MANIFEST.in  QUICKSTART.md  README.md  STRUCTURE.md  __init__.py  hooks.py  pyproject.toml  setup.py  structure_tree.txt
chat_frappe/: __init__.py  agent_service.py  api.py  hooks.py  install.py  modules.txt  patches.txt
chat_frappe/chat_frappe/: __init__.py
chat_frappe/config/: chat_frappe.py
chat_frappe/doctype/agent/: agent.json  agent.py  test_agent.py
chat_frappe/doctype/article/: __init__.py  article.js  article.json  article.py  test_article.py
chat_frappe/doctype/chat_conversation/: chat_conversation.json  chat_conversation.py  test_chat_conversation.py
chat_frappe/doctype/chat_message/: chat_message.json  chat_message.py  test_chat_message.py
chat_frappe/fixtures/: agent.json
chat_frappe/page/chat/: chat.js  chat.json
chat_frappe/public/css/: chat_frappe.css
chat_frappe/public/js/: chat_frappe.js
chat_frappe/templates/pages/: __init__.py
config/: desktop.py  docs.py
