[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_frappe"
version = "0.0.1"
authors = [
    {name = "Your Company", email = "info@yourcompany.com"}
]
description = "Sistema de chat con agentes IA para Frappe"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/Jovenjr/chat_frappe"
Repository = "https://github.com/Jovenjr/chat_frappe.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["chat_frappe*"]

[tool.bench.dev-dependencies]
